# Zx32

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeMycfg.cmake  CMakePresets.json  README.md  xmake.lua  xmake_open_vs.bat
include/Wx32/: APIs.h  Define.h  Utils.h
include/Wx32/Private/: WxKernel32.h  WxUser32.h
src/: CMakeLists.txt  Utils.cpp
src/Private/: WxKernel32.cpp  WxUser32.cpp
src/include/Zx32/: APIs.h  Define.h  Utils.h
src/include/Zx32/Private/: WxKernel32.h  WxUser32.h
src/src/Zx32/: Utils.cpp
src/src/Zx32/Private/: WxKernel32.cpp  WxUser32.cpp
test/: CMakeLists.txt  main.cpp
